# reading-group-bot

./: .dockerenv  .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  Rocket.toml  docker-compose.yml  docker-entrypoint.sh
.github/: copilot-instructions.md
migrations/2021-11-13-030638_create_logins/: down.sql  up.sql
migrations/2021-11-13-030919_create_papers/: up.sql
migrations/2021-11-13-031438_create_votes/: up.sql
migrations/2026-03-10-000001_add_pdf_to_papers/: down.sql  up.sql
migrations/2026-03-10-000002_add_publication_year_to_papers/: down.sql  up.sql
migrations/2026-03-10-000003_add_thumbnail_to_papers/: down.sql  up.sql
migrations/2026-03-10-000004_add_admin_to_logins/: down.sql  up.sql
migrations/2026-03-10-000005_add_paper_dates/: down.sql  up.sql
migrations/2026-03-10-000006_add_vote_value/: down.sql  up.sql
migrations/2026-03-15-000007_add_user_approval_and_role_to_logins/: down.sql  up.sql
migrations/2026-03-15-000008_add_last_connected_to_logins/: down.sql  up.sql
migrations/2026-03-15-000009_add_presenter_id_to_papers/: up.sql
migrations/2026-03-15-000010_add_is_selected_to_papers/: down.sql  up.sql
scripts/: members.csv  members_online.csv  papers.csv  sample_papers.py
src/: main.rs  model.rs  pdf_utils.rs  schema.rs  user.rs
static/css/: gh.css  style.css
static/js/: gh.js
templates/: account.html.tera  admin_discussed.html.tera  base.html.tera  discussed.html.tera  index.html.tera  login.html.tera  paper.html.tera  paper_edit.html.tera  ranking.html.tera  register.html.tera  schedule.html.tera
(+2 files in other folders)
