[package]
name = "reading-group-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"]}
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"]}
diesel = { version = "1", features = ["sqlite"] }
diesel_migrations = "1"
rust-crypto = "*"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
