[package]
name = "reading-group-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"]}
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_sqlite_pool"]}
diesel = { version = "2", features = ["sqlite"] }
diesel_migrations = "2"
rust-crypto = "*"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

[dev-dependencies]
google-sheets4 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^3.0"
